# model-engine-rs

./: .gitignore  Cargo.toml
exported_models/ctb/: ctb-v1.json  ctb-v2.json  ctb-v3.json
exported_models/lgbm/: lgbm-v1.json  lgbm-v1.onnx  lgbm-v2.json  lgbm-v2.onnx  lgbm-v3.json  lgbm-v3.onnx
exported_models/rf/: rf-v1.json  rf-v1.onnx  rf-v2.json  rf-v2.onnx  rf-v3.json  rf-v3.onnx
exported_models/xgb/: xgb-v1.json  xgb-v1.onnx  xgb-v2.json  xgb-v2.onnx  xgb-v3.json  xgb-v3.onnx
onnx-models/: poetry.toml  pyproject.toml
onnx-models/notebooks/: generate-models.ipynb
onnx-models/onnx_models/: generate_models.py  main.py  to_onnx.py
