[tool.poetry]
name = "onnx-models"
version = "0.1.0"
description = ""
authors = ["Lucas Caraça <lucascaraca94@gmail.com>"]
readme = "README.md"
packages = [{include = "onnx_models"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.0.4"
pandas = "^2.0.3"
scikit-learn = "^1.3.0"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
plotly = "^5.16.0"
lightgbm = "^4.0.0"
catboost = "^1.2"
xgboost = "^1.7.6"
numpy = "^1.25.2"
optuna = "^3.3.0"
statsmodels = "^0.14.0"
onnx = "^1.14.1"
onnxruntime = "^1.16.1"
onnxruntime-gpu = "^1.16.1"
skl2onnx = "^1.15.0"
onnxmltools = {git = "https://github.com/onnx/onnxmltools"}
pyarrow = "^13.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
